# AgentNotify

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agentnotify/: __init__.py  cli.py
agentnotify/config/: config.py
agentnotify/core/: __init__.py  notifications.py  output.py  procinfo.py  result.py  runner.py  shellhooks.py  timefmt.py  watcher.py
agentnotify/notify/: base.py  console.py  macos.py  null.py  windows.py
docs/: assumptions.md  commit_plan.md  project_charter.md  release_checklist.md  scrum_working_agreement.md
examples/: codex_notify_bridge.sh  slow_fail.sh  slow_success.sh
tests/: test_auto_detect.py  test_cli_commands.py  test_integration.py  test_notify.py  test_output.py  test_runner.py  test_shellhooks.py  test_watcher.py
