[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-notify"
version = "0.1.0"
description = "Cross-platform notifications for long-running agentic CLI tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "agent-notify contributors" }
]
keywords = ["cli", "notification", "agents", "codex", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools"
]
dependencies = [
  "click>=8.1,<9.0",
  "tomli>=2.0; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.5",
  "twine>=5.1"
]
windows = [
  "win10toast>=0.9; platform_system == 'Windows'"
]

[project.urls]
Homepage = "https://github.com/Kipung/AgentNotify"
Repository = "https://github.com/Kipung/AgentNotify"
Issues = "https://github.com/Kipung/AgentNotify/issues"

[project.scripts]
agent-notify = "agentnotify.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentnotify*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
